# KU_Advanced-Topics-in-Natural-Language-Processing_Individual-Assignment

./: .gitignore  KU_ATNLP_Group_1_2_3.ipynb  KU_ATNLP_Individual_t5_1.ipynb  KU_ATNLP_Individual_t5_2.ipynb  LICENSE  README.md  custom_tokenizer.json  evaluate.sh  evaluate_me.sh  linux_setup.sh  main.py  pyproject.toml  requirements.txt  setup.sh  train.sh  train_me.py  train_me.sh  windows_setup.sh
data/: data_loader.py  dataloader.py  prepare_tokenizer.py  t.py
experiments/: aggregate_and_plot_experiment_1.py  aggregate_and_plot_experiment_2.py  demo.py  evaluate.py  evaluate_me.py  ex3.py  experiment.py  tokenizer_dataloader.py  train.py  train_me.py
experiments/evaluate_experiment/: experiment_1.py  experiment_1_me.py  experiment_2.py  experiment_2_me.py  experiment_2_me_v2.py  experiment_3.py
models/: transformer.py
results/: 1-config-174e6e43-cf6f-4427-8b82-f6c4a5d493cb.json  1-model-174e6e43-cf6f-4427-8b82-f6c4a5d493cb.pt  1-model-d7ab6e45-a942-4ef1-b765-38ff9c5ad7c3.pt
