[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kunlp"
version = "0.0.1"
description = "kunlp"
authors = [{name = "Klaus Jupiter Bentzen", email = "your.email@example.com"}]
license = {text = "Apache-2.0 License"}
readme = "README.md"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = []


[project.scripts]

[tool.setuptools.packages.find]
include = ["experiments*", "models*", "data*"]
namespaces = false

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
